--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Mamba</title>
 </head>
 <body>
@@ -20,12 +21,139 @@
         </header>
 
         <main>
-            <ul>
-                <li>Product 1</li>
-                <li>Product 2</li>
-                <li>Product 3</li>
-                <li>Product 4</li>
-            </ul>
+           <div class="row center">
+               <div class="card">
+                   <a href="product.html">
+                       <!-- image size : 680px by 830px-->
+                       <img class="medium" src="./images/p1.jpg" alt="product">
+                   </a>
+                   
+                   <div class="card-body">
+                       <a href="product.html">
+                           <h2>Samsung Galaxy S22 Ultra</h2>
+                       </a>
+                       
+                       <div class="rating">
+                        <span><i class = "fa fa-star"></i></span>
+                        <span><i class = "fa fa-star"></i></span>
+                        <span><i class = "fa fa-star"></i></span>
+                        <span><i class = "fa fa-star"></i></span>
+                        <span><i class = "fa fa-star"></i></span> 
+                       </div>
+                       
+                       <div class="price">
+                           $2900
+                        </div>
+                       
+                   </div>
+               </div>
+
+               <div class="card">
+                <a href="product.html">
+                    <!-- image size : 680px by 830px-->
+                    <img class="medium" src="./images/p2.jpg" alt="product">
+                </a>
+                
+                <div class="card-body">
+                    <a href="product.html">
+                        <h2>Iphone 13 Pro Max</h2>
+                    </a>
+                    
+                    <div class="rating">
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span> 
+                    </div>
+                    
+                    <div class="price">
+                        $2800
+                     </div>
+                    
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="product.html">
+                    <!-- image size : 680px by 830px-->
+                    <img class="medium" src="./images/p3.jpg" alt="product">
+                </a>
+                
+                <div class="card-body">
+                    <a href="product.html">
+                        <h2>Xiaomi Remdi Note11 Pro</h2>
+                    </a>
+                    
+                    <div class="rating">
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span> 
+                    </div>
+                    
+                    <div class="price">
+                        $950
+                     </div>
+                    
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="product.html">
+                    <!-- image size : 680px by 830px-->
+                    <img class="medium" src="./images/p4.png" alt="product">
+                </a>
+                
+                <div class="card-body">
+                    <a href="product.html">
+                        <h2>MacBook Pro</h2>
+                    </a>
+                    
+                    <div class="rating">
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span> 
+                    </div>
+                    
+                    <div class="price">
+                        $1200
+                     </div>
+                    
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="product.html">
+                    <!-- image size : 680px by 830px-->
+                    <img class="medium" src="./images/p5.png" alt="product">
+                </a>
+                
+                <div class="card-body">
+                    <a href="product.html">
+                        <h2>Nvidia RTX 3090</h2>
+                    </a>
+                    
+                    <div class="rating">
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span>
+                     <span><i class = "fa fa-star"></i></span> 
+                    </div>
+                    
+                    <div class="price">
+                        $2780
+                     </div>
+                    
+                </div>
+            </div>
+
+            
+           </div>
         </main>
 
         <footer class="row center">
