--- a/template/style.css
+++ b/template/style.css
@@ -48,6 +48,16 @@ background-color: #030303;
 
 /*Comon*/
 
+h1{
+    font-size: 1.8rem;
+    padding: 1rem 0;
+}
+
+h2{
+    font-size: 1.8rem;
+    pad: 1rem 0;
+}
+
 a{
 
     text-decoration: none;
@@ -88,5 +98,47 @@ a.brand {
 .row.center {
 
     justify-content: center;
-    color: #ffffff;
+    
 }
+
+ /* imaes */
+
+ img{
+     border-radius: 0.5rem;
+ }
+
+ img.medium {
+     max-width: 29rem;
+     width: 100%;
+ }
+
+ /*Card*/
+
+ .card{
+     border: 0.1rem #c0c0c0 solid;
+     background-color: #f8f8f8;
+     border-radius: 0.5rem;
+     margin: 1rem;
+ }
+
+ .card-body{
+     padding: 1rem;
+ }
+
+ .card-body > * {
+     margin-bottom: 0.5rem;
+
+ }
+
+ .price {
+     font-size: 2rem;
+ }
+
+ /*Rating*/
+
+ .rating span {
+
+    color:#f0c040 ;
+    margin: 0.1rem;
+
+ }
