--- a/template/style.css
+++ b/template/style.css
@@ -28,7 +28,7 @@ body {
 header {
 
     grid-area: header;
-    background-color: #000 ;
+    background-color: #242222 ;
 
 }
 
@@ -42,7 +42,7 @@ main {
 footer {
 
     grid-area: footer;
-background-color: #030303;
+background-color: #242222;
 
 }
 
@@ -78,12 +78,17 @@ header a{
     padding: 1rem;
 }
 
+
 a.brand {
 
     color: #ffffff;
     font-size: 3rem;
     font-weight: bold;
 
+}
+
+a:hover {
+    color: #ff8000;
 }
 
 .row {
@@ -98,6 +103,7 @@ a.brand {
 .row.center {
 
     justify-content: center;
+    color: #ffffff;
     
 }
 
