--- a/template/index.html
+++ b/template/index.html
@@ -6,11 +6,11 @@
     <title>Mamba</title>
 </head>
 <body>
-    <div class="grid-container">
-        <header class="row">
+    <div className="grid-container">
+        <header className="row">
 
             <div>
-                <a  class="brand" href="index.html">Mamba</a>
+                <a  className="brand" href="index.html">Mamba</a>
             </div>
             <div>
                 <a href="cart.html">Cart</a>
@@ -20,131 +20,131 @@
         </header>
 
         <main>
-           <div class="row center">
-               <div class="card">
+           <div className="row center">
+               <div className="card">
                    <a href="product.html">
                        <!-- image size : 680px by 830px-->
-                       <img class="medium" src="./images/p1.jpg" alt="product">
+                       <img className="medium" src="./images/p1.jpg" alt="product">
                    </a>
                    
-                   <div class="card-body">
+                   <div className="card-body">
                        <a href="product.html">
                            <h2>Samsung Galaxy S22 Ultra</h2>
                        </a>
                        
-                       <div class="rating">
-                        <span><i class = "fa fa-star"></i></span>
-                        <span><i class = "fa fa-star"></i></span>
-                        <span><i class = "fa fa-star"></i></span>
-                        <span><i class = "fa fa-star"></i></span>
-                        <span><i class = "fa fa-star"></i></span> 
+                       <div className="rating">
+                        <span><i className = "fa fa-star"></i></span>
+                        <span><i className = "fa fa-star"></i></span>
+                        <span><i className = "fa fa-star"></i></span>
+                        <span><i className = "fa fa-star"></i></span>
+                        <span><i className = "fa fa-star"></i></span> 
                        </div>
                        
-                       <div class="price">
+                       <div className="price">
                            $2900
                         </div>
                        
                    </div>
                </div>
 
-               <div class="card">
+               <div className="card">
                 <a href="product.html">
                     <!-- image size : 680px by 830px-->
-                    <img class="medium" src="./images/p2.jpg" alt="product">
+                    <img className="medium" src="./images/p2.jpg" alt="product">
                 </a>
                 
-                <div class="card-body">
+                <div className="card-body">
                     <a href="product.html">
                         <h2>Iphone 13 Pro Max</h2>
                     </a>
                     
-                    <div class="rating">
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span> 
+                    <div className="rating">
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span> 
                     </div>
                     
-                    <div class="price">
+                    <div className="price">
                         $2800
                      </div>
                     
                 </div>
             </div>
 
-            <div class="card">
+            <div className="card">
                 <a href="product.html">
                     <!-- image size : 680px by 830px-->
-                    <img class="medium" src="./images/p3.jpg" alt="product">
+                    <img className="medium" src="./images/p3.jpg" alt="product">
                 </a>
                 
-                <div class="card-body">
+                <div className="card-body">
                     <a href="product.html">
                         <h2>Xiaomi Remdi Note11 Pro</h2>
                     </a>
                     
-                    <div class="rating">
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span> 
+                    <div className="rating">
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span> 
                     </div>
                     
-                    <div class="price">
+                    <div className="price">
                         $950
                      </div>
                     
                 </div>
             </div>
 
-            <div class="card">
+            <div className="card">
                 <a href="product.html">
                     <!-- image size : 680px by 830px-->
-                    <img class="medium" src="./images/p4.png" alt="product">
+                    <img className="medium" src="./images/p4.png" alt="product">
                 </a>
                 
-                <div class="card-body">
+                <div className="card-body">
                     <a href="product.html">
                         <h2>MacBook Pro</h2>
                     </a>
                     
-                    <div class="rating">
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span> 
+                    <div className="rating">
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span> 
                     </div>
                     
-                    <div class="price">
+                    <div className="price">
                         $1200
                      </div>
                     
                 </div>
             </div>
 
-            <div class="card">
+            <div className="card">
                 <a href="product.html">
                     <!-- image size : 680px by 830px-->
-                    <img class="medium" src="./images/p5.png" alt="product">
+                    <img className="medium" src="./images/p5.png" alt="product">
                 </a>
                 
-                <div class="card-body">
+                <div className="card-body">
                     <a href="product.html">
                         <h2>Nvidia RTX 3090</h2>
                     </a>
                     
-                    <div class="rating">
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span>
-                     <span><i class = "fa fa-star"></i></span> 
+                    <div className="rating">
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span>
+                     <span><i className = "fa fa-star"></i></span> 
                     </div>
                     
-                    <div class="price">
+                    <div className="price">
                         $2780
                      </div>
                     
@@ -155,7 +155,7 @@
            </div>
         </main>
 
-        <footer class="row center">
+        <footer className="row center">
             All right reseverd
         </footer>
     </div>
