--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,7 +63,7 @@ h1{
 }
 
 h2{
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   pad: 1rem 0;
 }
 
@@ -72,6 +72,45 @@ a{
   text-decoration: none;
 
 }
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+li {
+
+  margin-top: 1rem;
+
+}
+
+button {
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 00.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8f8f8;
+  cursor: pointer;
+
+}
+
+button:hover {
+  border: 0.1rem #404040 solid;
+}
+
+button.primary {
+  background-color: #f0c040;
+}
+
+button.block{
+  width: 100%;
+}
+
+
 
 a:hover {
 
@@ -100,6 +139,8 @@ a:hover {
   color: #ff8000;
 }
 
+
+
 .row {
 
   display: flex;
@@ -114,6 +155,22 @@ a:hover {
   justify-content: center;
   color: #242222;
   
+}
+
+.row.top {
+  align-items: flex-start;
+}
+
+.col-1 {
+
+  flex: 1 1 25rem;
+
+}
+
+.col-2 {
+
+  flex: 2 1 50rem;
+
 }
 
 .row.center1 {
@@ -134,11 +191,15 @@ img.medium {
    width: 100%;
 }
 
+img.large {
+  width: 100%;
+}
+
 /*Card*/
 
 .card{
    border: 0.1rem #c0c0c0 solid;
-   background-color: #f8f8f8;
+   background-color: #f0f0f0;
    border-radius: 0.5rem;
    margin: 1rem;
 }
@@ -167,4 +228,19 @@ img.medium {
 
 .rating span:last-child{
   color: #404040;
+}
+
+
+/* Alert */
+
+.success {
+
+  color:rgb(28, 218, 28)
+
+}
+
+.error {
+
+  color: red;
+
 }
